[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "doccloud-cli"
version = "0.0.1"
authors = [
  { name="Noah Dangerfield", email="noah.dangerfield@gmail.com" },
]
description = "A CLI for the DocumentCloud platform."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
Homepage = "https://github.com/leadbraw/doccloud-cli"
Issues = "https://github.com/leadbraw/doccloud-cli/issues"